exercise_1.09/manifests/deployment.log-output-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: dogamak/hy-kubernetes-log-output-app:v2
          imagePullPolicy: Always
