exercise_1.09/manifests/deployment.ping-pong-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: dogamak/hy-kubernetes-ping-pong-app:v1
          imagePullPolicy: Always
